# rdog

./: .gitignore  .gitmodules  Cargo.toml  TODO.md  atmosphere.glsl  capture.sh  out.wgsl  run.bat  run.sh  rust-toolchain.toml
.cargo/: config.toml
assets/shaders/rdog_shaders.spvs/: atmosphere-atmosphere.spv  atmosphere-noise.spv  direct-main.spv  specular-main.spv
crates/rdog/: Cargo.toml  build.rs
crates/rdog/assets/: config.json  config_scene1.json
crates/rdog/assets/imports/: 00types.wgsl  01cam.wgsl  02rng.wgsl  cam.wgsl  light.wgsl  noisy.wgsl  ray.wgsl  rng.wgsl  scatter.wgsl  scene.wgsl  types.wgsl  util.wgsl
crates/rdog/assets/imports/examples/: sphere_scene.wgsl
crates/rdog/assets/imports/examples/reaction_diffusion/: trace.wgsl
crates/rdog/assets/shaders/: accum.wgsl  combined.wgsl  newcombined.wgsl  newraster.wgsl  octree.wgsl  raster.wgsl  readback.wgsl  readback_trace.wgsl  scatter-main.spv  trace-main.spv  trace.wgsl  trace_readback.wgsl  voxel.wgsl  voxel_accel.wgsl  voxel_trace.wgsl  z_motion-main.spv  z_trace-main.spv
crates/rdog/assets/shaders/examples/reaction_diffusion/: diff_init.wgsl  diff_raster.wgsl  diff_step.wgsl  diff_step_final.wgsl  diff_trace.wgsl
crates/rdog/assets/shaders/examples/sphere_render/: sphere_trace.wgsl
crates/rdog/assets/shaders/examples/voxel/: voxel_init.wgsl  voxel_raster.wgsl
crates/rdog/assets/shaders/rdog_shaders.spvs/: atmosphere-atmosphere.spv  atmosphere-noise.spv  direct-main.spv  raster-fs.spv  raster-vs.spv  scatter-main.spv  specular-main.spv  trace-main.spv  z_gaussian-main.spv  z_motion-main.spv  z_trace-main.spv
crates/rdog/examples/: demo.rs
crates/rdog/examples/initial/: mod.rs  pipelines.rs  plugin.rs
crates/rdog/examples/reaction_diffusion/: mod.rs  pipelines.rs
crates/rdog/examples/sphere_render/: mod.rs  pipelines.rs
crates/rdog/examples/voxel/: mod.rs  pipelines.rs
crates/rdog/src/: lib.rs  main.rs
crates/rdog/src/buffers/: bind_group.rs  bindable.rs  buffer_builder.rs  bufferable.rs  map_read_buffer.rs  map_write_buffer.rs  mapped_uniform_buffer.rs  mod.rs  storage_buffer.rs  texture.rs
crates/rdog/src/interface/: orbit.rs
crates/rdog/src/plugin/: event.rs  mod.rs  rendering.rs  shader.rs  state.rs
crates/rdog/src/plugin/stages/: cache.rs  extract.rs  mod.rs  prepare.rs
crates/rdog/src/plugin/ui/: mod.rs
crates/rdog/src/plugins/: mod.rs  render_plugin.rs
crates/rdog/src/plugins/debug/: mod.rs  ray.rs
crates/rdog/src/plugins/debug/ui/: lights.rs  materials.rs  mod.rs  render.rs  system.rs  util.rs
crates/rdog/src/plugins/rdog/: camera.rs  event.rs  graph.rs  mod.rs  passes.rs  plugin_config.rs  rendering.rs  shader.rs  state.rs
crates/rdog/src/plugins/rdog/stages/: cache.rs  extract.rs  mod.rs  prepare.rs
crates/rdog/src/plugins/rdog/ui/: mod.rs
crates/rdog/src/plugins/rdog_buffers/: mod.rs
crates/rdog/src/plugins/rdog_headless/: mod.rs
crates/rdog/src/plugins/rdog_passes/: event.rs  mod.rs
crates/rdog/src/plugins/readback/: mod.rs
crates/rdog/src/renderer/: buffers.rs  camera_controllers.rs  compute_pass.rs  config.rs  engine.rs  images.rs  mod.rs  render.rs  shaders.rs  utils.rs
crates/rdog/src/renderer/buffers/: buffer_builder.rs  mod.rs  storage_buffer.rs
crates/rdog/src/renderer/passes/: atmosphere.rs  direct.rs  mod.rs  octree.rs  raster.rs  ray.rs  readback.rs  rt.rs  rt_single.rs  sub_ray.rs  testing.rs  trace.rs  voxel.rs
crates/rdog_builder/: Cargo.toml
crates/rdog_builder/src/: main.rs
crates/rdog_lib/: Cargo.toml
crates/rdog_lib/src/: camera.rs  frame.rs  lib.rs  math.rs  mix.rs  octree.rs  pass.rs  ray.rs  ray_old.rs  rng.rs  sample.rs  scene.rs  sdf.rs  shader.rs  smoothstep.rs  util.rs
crates/rdog_lua_to_wgsl/: Cargo.toml
crates/rdog_macro/: Cargo.toml
crates/rdog_macro/src/: lib.rs
crates/rdog_shaders/: Cargo.toml
crates/rdog_shaders/src/: atmosphere.rs  atmosphere.rs.bak  combined.rs  combined.rs.bak  direct.rs  lib.rs  raster.rs  raster.rs.bak  ray.rs  ray.rs.back  ray.rs.bak  ray.rs.save  scatter.rs  sdf.rs  specular.rs  sub_ray.rs  trace.rs  z_gaussian.rs  z_motion.rs  z_trace.rs
crates/rdog_shaders/src/atmosphere/: atmosphere.rs  mod.rs  noise.rs
crates/rdog_sub_ray/: Cargo.toml
crates/rdog_sub_ray/src/: camera.rs  frame.rs  lib.rs  math.rs  mix.rs  sample.rs  sdf.rs  shader.rs  tlib.rs  util.rs
