[workspace]
resolver = "2"
members = [
    "crates/rdog",
    "crates/rdog_lib",
    "crates/rdog_builder",
    "crates/rdog_shaders",
]

[workspace.package]
edition = "2021"
authors = ["Nate"]
version = "0.1.0"
license = ""
repository = ""

[workspace.dependencies]
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
spirv-std = { git = "https://github.com/LykenSol/rust-gpu/", branch = "rustup" }
spirv-builder = { git = "https://github.com/LykenSol/rust-gpu/", branch = "rustup", features = [
    "watch",
] }
log = "0.4.22"
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_winit",
    "bevy_window",

    "bevy_render",
    "bevy_state",
    "hdr",

    "multi_threaded",

    "tonemapping_luts",
    "bevy_core_pipeline",
] }

