[workspace]
resolver = "2"
members = ["crates/rdog", "crates/rdog_lib", "crates/rdog_macro"]

[workspace.package]
edition = "2021"
authors = ["Nate"]
version = "0.1.0"
license = ""
repository = ""

[workspace.dependencies]
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
log = "0.4.22"
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_gizmos",
    "bevy_winit",
    "bevy_window",

    "bevy_render",
    "bevy_state",
    "hdr",

    "file_watcher",
    "multi_threaded",

    "tonemapping_luts",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_pbr",
] }

# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256


# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[profile.dev]
codegen-units = 1
