[package]
name = "rdog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[example]]
name = "initial"
path = "examples/initial/mod.rs"

[[example]]
name = "reaction_diffusion"
path = "examples/reaction_diffusion/mod.rs"

[[example]]
name = "sphere_render"
path = "examples/sphere_render/mod.rs"

[dependencies]
# shared = { path = "crates/shaders/shared" }
glam = { version = "0.29", default-features = false }
bytemuck = { workspace = true }
wgpu = { version = "23.0.1" }
# Workspace
rdog_lib = { path = "../rdog_lib" }
rdog_macro = { path = "../rdog_macro" }
strum = { version = "0.26.3", default-features = false, features = [
    "std",
    "derive",
] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
log = { workspace = true }
derivative = "2.2.0"
guillotiere = "0.6.2"
bevy = { workspace = true }
bevy_egui = "0.33.0"
rand = "0.8.5"
thiserror = "2.0.9"
humantime = { version = "2.1.0", optional = true }
serde = "1.0.217"
serde_json = "1.0.136"
transform-gizmo-bevy = "0.4.0"
async-channel = "2.3.1"
naga_oil = "0.16.0"
paste = "1.0"
exr = "1.73.0"
pollster = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.60"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.18"

[features]
default = ["combined", "metrics"]
metrics = ["humantime"]
combined = []
