[package]
name = "rdog_builder"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
spirv-builder.workspace = true
# uu_cp = "0.0.28"

# See rustc_codegen_spirv/Cargo.toml for details on these features
[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]
