[package]
name = "rdog_sub_ray"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
spirv-std = { workspace = true }
# rdog_lib = { path = "../rdog_lib" }
bytemuck = { workspace = true }
glam = { version = "0.29", default-features = false, features = ["bytemuck"] }
